<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.frido.rando.SignIn">

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:fontFamily="casual"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/action_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signInTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="casual"
        android:textSize="34sp"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:id="@+id/or"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:text="@string/login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginGoogle"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/or"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signIn_Firebase"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:onClick="signInWithFirebase" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:layout_below="@+id/signInTitle"
        android:layout_alignParentStart="true">

    </EditText>
</RelativeLayout>
