<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.frido.rando.Home"
    android:background="@drawable/grey_cat"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_WelcomeRando"
        android:text="@string/home_Welcome"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="56sp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorHint"
        android:textStyle="normal|bold" />
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/titleAnimation"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_Button_Start"
        android:text="@string/home_Button_Start"
        android:onClick="startMainPictureDisplayActivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="14sp"
        android:layout_above="@+id/home_PersonalHistory"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
            android:fontFamily="casual"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorHint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_PersonalHistory"
            android:text="@string/home_History"
            android:onClick="startHistoryActivity"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="14sp"
            android:layout_alignBottom="@+id/logoutButton"
            android:layout_alignStart="@+id/home_Button_Start"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="casual"
            android:textStyle="normal|bold"
            android:textColor="?android:attr/textColorHint"></Button>

        <Button
            android:text= "@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logoutButton"
            android:onClick="logout"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="14sp"
            android:layout_below="@+id/home_WelcomeRando"
            android:layout_alignStart="@+id/home_PersonalHistory"
            android:fontFamily="casual"
            android:textStyle="normal|bold"
            android:textColor="?android:attr/textColorHint">

        </Button>

    </LinearLayout>

</RelativeLayout>
